--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     "email": "jane.smith@company.com",
     "position": "Marketing Manager",
     "status": "Pending",
+        "phone": "+1 (555) 123-4562",
     "sub_status": "Final Interview",
     "started_date": null,
     "salary": null,
@@ -216,6 +217,7 @@
     "email": "mike.johnson@company.com",
     "position": "Data Analyst",
     "status": "Hired",
+        "phone": "+1 (555) 123-4564",
     "sub_status": "Set Up Workspace and Equipment",
     "started_date": "2023-05-15",
     "salary": 75000,
@@ -231,6 +233,7 @@
     "email": "emily.brown@company.com",
     "position": "UX Designer",
     "status": "Rejected",
+        "phone": "+1 (555) 153-4567",
     "sub_status": "Rejection Notice",
     "started_date": null,
     "salary": null,
@@ -246,6 +249,7 @@
     "email": "alex.chen@company.com",
     "position": "DevOps Engineer",
     "status": "Hired",
+        "phone": "+1 (565) 129-4567",
     "sub_status": "Introduce Company Culture",
     "started_date": "2023-06-15",
     "salary": 90000,
